# vearch

./: .gitignore  README.md  ffmpeg.sh  get_data.sh  install_caffe.sh
design/: index.html
image_search/: image_search.py
server/: Cargo.toml  app.js  image_search.py  package.json
server/image_search/: image_search.py
server/src/: main.rs
server/views/: index.html
