[package]

name = "server"
version = "0.0.1"
authors = ["Aaron Weiss <aaronweiss74@gmail.com>"]

[dependencies.avcodec55]
git = "https://github.com/aatxe/rust-ffmpeg"

[dependencies.avformat55]
git = "https://github.com/aatxe/rust-ffmpeg"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper"

[dependencies.image]
git = "https://github.com/PistonDevelopers/image"

[dependencies.iron]
git = "https://github.com/iron/iron.git"

[dependencies.router]
git = "https://github.com/iron/router.git"
